# Blackstar-TTS

./: Dockerfile  main.py  pyproject.toml  requirements.txt
cogs/: TTS.py
cogs/events/: messaging.py  voice.py
ui/: RequestButton.py
utils/: constants.py  utils.py
