[project]
name = "blackstar-tts-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "cogwatch>=3.3.1",
    "davey>=0.1.6",
    "discord>=2.3.2",
    "edge-tts>=7.2.8",
    "ffmpeg>=1.4",
    "jishaku>=2.7.5",
    "pynacl>=1.6.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "six>=1.17.0",
    "uuid>=1.30",
]
